tests/snapshots/test_runner__tests__compiler__typecheck__unify_function_branches_2.kk.snap
---
source: tests/test_runner.rs
expression: stripped_actual_output.trim()
---
============
INPUT
============
enum Boolean = #true #false
enum Bomb = #bomb
let and: \(Boolean, Boolean) => Boolean =
  \(#true, #bomb) => #true

============
EXIT CODE
============
1

============
STDOUT
============


============
STDERR
============
error:
  ┌─ tests/compiler/typecheck/unify_function_branches_2.kk:4:12
  │
4 │   \(#true, #bomb) => #true
  │            ^^^^^ Type mismatch
  │
  = +---------------+-------------+
    | EXPECTED TYPE | ACTUAL TYPE |
    +---------------+-------------+
    | - Boolean     | + Bomb      |
    +---------------+-------------+
